sip4 (4.16+dfsg-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Bump API version to 11.1 (keep 11.0 in provided versions).
  * Update debian/copyright to copyright-format 1.0.
  * Add Files-Excluded field to remove HTML documentation, which
    contains sourceless minified jquery.
  * Simplify debian/watch, and mangle dfsg version.

 -- Dmitry Shachnev <mitya57@gmail.com>  Wed, 28 May 2014 16:14:08 +0400

sip4 (4.15.5-2) unstable; urgency=medium

  * Upload to unstable

 -- Scott Kitterman <scott@kitterman.com>  Fri, 09 May 2014 07:48:12 -0400

sip4 (4.15.5-1) experimental; urgency=low

  * New upstream release.
  * Bump API version to 11.0.
  * debian/rules: Drop Python 2.5 compatibility code.

 -- Dmitry Shachnev <mitya57@gmail.com>  Tue, 18 Mar 2014 10:40:51 +0400

sip4 (4.15.4-1) unstable; urgency=low

  * New upstream bugfix release.
  * Adjust python-qwt5-qt4 and python-qwt3d-qt4 breaks, only the newly
    uploaded versions work with new sip.

 -- Dmitry Shachnev <mitya57@gmail.com>  Wed, 08 Jan 2014 19:36:26 +0400

sip4 (4.15.3-1) unstable; urgency=low

  [ Dmitry Shachnev ]
  * New upstream release.
  * Add myself to Uploaders.

  [ Scott Kitterman ]
  * Bump standards version to 3.9.5 without further change.

 -- Dmitry Shachnev <mitya57@gmail.com>  Wed, 06 Nov 2013 07:34:12 +0400

sip4 (4.15.2-2) unstable; urgency=low

  * Upload to unstable
  * Revert workaround for #723070, since it's addressed in dh-python now

 -- Scott Kitterman <scott@kitterman.com>  Fri, 11 Oct 2013 19:26:33 -0400

sip4 (4.15.2-1) experimental; urgency=low

  * New upstream release
    - Contains the sip4 part of the fix for recent pykde4 breakage
  * Temporarily hard code python3 Depends in python3-sip-dev to work around
    breakage in dh-python (See #723070)

 -- Scott Kitterman <scott@kitterman.com>  Mon, 16 Sep 2013 00:45:10 -0400

sip4 (4.15.1-1) experimental; urgency=low

  [ Dmitry Shachnev ]
  * Call dh_sphinxdoc after dh_installdocs, to fix build failure with