@@ -196,4 +196,8 @@ binary-arch: install-arch
 	$(MAKE) -f debian/rules DH_OPTIONS=-a binary-common
 
 binary: binary-arch binary-indep
-.PHONY: build clean binary-indep binary-arch binary configure
+
+get-orig-source:
+	uscan --verbose --download-current-version
+
+.PHONY: build binary-indep binary-arch binary clean configure get-orig-source
