@@ -6,6 +6,7 @@ sip4 (4.16+dfsg-1) UNRELEASED; urgency=medium
   * Add Files-Excluded field to remove HTML documentation, which
     contains sourceless minified jquery.
   * Simplify debian/watch, and mangle dfsg version.
+  * Add get-orig-source target to debian/rules.
 
  -- Dmitry Shachnev <mitya57@gmail.com>  Wed, 28 May 2014 16:14:08 +0400
 
